# api/docs/swagger.json
@@ -17,7 +17,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "BASKET"
+                    "basket"
                 ],
                 "summary": "Create a new basket",
                 "parameters": [
@@ -59,6 +59,56 @@
                 }
             }
         },
+        "/basket/{id}": {
+            "get": {
+                "description": "Get basket by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "basket"
+                ],
+                "summary": "Get basket by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "basket",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Basket"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/category": {
             "post": {
                 "description": "Create a new category",
@@ -69,7 +119,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "CATEGORY"
+                    "category"
                 ],
                 "summary": "Create a new category",
                 "parameters": [
