# api/handler/category.go
@@ -8,17 +8,18 @@ import (
 	"strconv"
 
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
 )
 
 // CreateBasket godoc
 // @Router       /category [POST]
 // @Summary      Create a new category
 // @Description  Create a new category
-// @Tags         CATEGORY
+// @Tags         category
 // @Accept       json
 // @Produce      json
 // @Param        category  body  models.CreateCategory  true  "category data"
-// @Success      201  {object}  models.Category.ID
+// @Success      201  {object}  models.Category
 // @Failure      400  {object}  models.Response
 // @Failure      404  {object}  models.Response
 // @Failure      500  {object}  models.Response
@@ -50,10 +51,16 @@ func (h Handler) CreateCategory(c *gin.Context) {
 func (h Handler) GetCategoryByID(c *gin.Context) {
 	var err error
 
-	id := c.Param("id")
+	uid := c.Param("id")
+
+	id, err := uuid.Parse(uid)
+	if err != nil {
+		handleResponse(c, "invalid uuid type ", http.StatusBadRequest, err.Error())
+		return
+	}
 
 	category, err := h.storage.Category().Get(context.Background(), models.PrimaryKey{
-		ID: id,
+		ID: id.String(),
 	})
 	if err != nil {
 		handleResponse(c, "error while get category by id", http.StatusInternalServerError, err)
